# flask-security-test-cases

./: .gitignore
server/: app.py  database.py  models.py  pyproject.toml
ui/: README.md  package-lock.json  package.json  vite.config.ts
ui/src/: Home.tsx  Layout.tsx  login.tsx  main.tsx  useAuth.tsx  utils.ts
ui/src/components/: AuthLayout.tsx  ProtectedLayout.tsx
